fixed issues with average and docker file
